kubernetes/apps/overlays/production/authentik/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: ak-outpost-ldap
  namespace: authentik
spec:
  parentRefs:
    - name: envoy-internal
      namespace: envoy
      sectionName: ldaps
  hostnames:
    - authentik.${INTERNAL_DOMAIN}
  rules:
    - backendRefs:
        - name: ak-outpost-ldap
          port: ldap
